[#45119] Update patternlab header markup to match drupal output. Styling updates for welcome page

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.mustache
@@ -1,4 +1,5 @@
-{{&gt; organisms-header-simple }}
+{{&gt; organisms-header }}
+{{&gt; organisms-navigation-welcome-page }}
 
 &lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot; tabindex=&quot;-1&quot;&gt;
   &lt;div class=&quot;region-content&quot;&gt;
