--- a/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
@@ -5,7 +5,19 @@
     top: 12px;
     z-index: 3;
   }
+
+  .page-simple & {
+    position: static;
+    display: block;
+    margin-bottom: em(24px, 16px);
+    @include breakpoint(700px , $no-query: true) {
+      float: left;
+    }
+  }
 }
+
+
+
 
 .site-name__link {
   @include image-replace(179px,36px);
@@ -14,10 +26,7 @@
 
   .page-simple & {
     @include svg-background(logo-simple);
-    margin-bottom: em(18px, 16px);
-    @include breakpoint(700px , $no-query: true) {
-      float: left;
-    }
+
 
   }
 }
