--- a/public/sites/all/themes/gesso/sass/partials/components/block/_block--gie-homepage-welcome-login.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/block/_block--gie-homepage-welcome-login.scss
@@ -5,23 +5,18 @@ $input-height: 30px;
   font-size: em(14px, 16px);
 
   .page-simple & {
+      max-width: 450px;
      @include breakpoint(700px , $no-query: true) {
       float: right;
-      max-width: 450px;
+      width: 40%;
     }
-  }
-
-  .form-actions {
-    float: left;
-    width: 25%;
-    min-width: 88px;
   }
 
   .form-item-name,
   .form-item-pass {
     float: left;
     width: 35%;
-    margin: 0 2% 2% 0;
+    margin: 0 6px 5px 0;
     input {
       color: #000;
     }
@@ -32,8 +27,9 @@ $input-height: 30px;
     height: $input-height;
   }
 
-  .forgot-password {
+  .form-actions > div {
     clear: left;
+    margin: 0 0 1.625em;
   }
 
   .form-item {
@@ -48,7 +44,9 @@ $input-height: 30px;
     margin-bottom: 0;
     padding-top: 0;
     padding-bottom: 0;
-
+    float: left;
+    width: 25%;
+    min-width: 81px;
   }
 
 }
