--- a/public/sites/all/themes/gesso/patternlab/public/patterns/00-atoms-10-page-elements-01-site-name-simple/00-atoms-10-page-elements-01-site-name-simple.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/00-atoms-10-page-elements-01-site-name-simple/00-atoms-10-page-elements-01-site-name-simple.mustache
@@ -1,4 +1,4 @@
-&lt;span class=&quot;site-name site-name--simple&quot;&gt;
+&lt;span class=&quot;site-name&quot;&gt;
   &lt;a class=&quot;site-name__link&quot; href=&quot;{{ url }}&quot; rel=&quot;home&quot;&gt;
     &lt;h1 class=&quot;site-name__text&quot;&gt;{{ siteName }}&lt;/h1&gt;
   &lt;/a&gt;
