--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/00-atoms/10-page-elements/01-site-name-simple@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/00-atoms/10-page-elements/01-site-name-simple@inprogress.mustache
@@ -1,4 +1,4 @@
-<span class="site-name site-name--simple">
+<span class="site-name">
   <a class="site-name__link" href="{{ url }}" rel="home">
     <h1 class="site-name__text">{{ siteName }}</h1>
   </a>
