--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/welcome-page@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/welcome-page@inprogress.mustache
@@ -1,4 +1,5 @@
-{{> organisms-header-simple }}
+{{> organisms-header }}
+{{> organisms-navigation-welcome-page }}
 
 <main id="main" class="main" role="main" tabindex="-1">
   <div class="region-content">
