--- a/public/sites/all/themes/gesso/sass/partials/components/_page-simple.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_page-simple.scss
@@ -4,7 +4,7 @@
 }
 
 
-.page-simple__inner {
+.main {
     background-color: #0c304b;
     @include breakpoint(700px , $no-query: true) {
     background: #0c304b url(../images/page-simple-bg.jpg) repeat-y 0 0;
