--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--welcome-page-info.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--welcome-page-info.scss
@@ -8,8 +8,8 @@
   @include breakpoint(700px , $no-query: true) {
     margin-bottom: em(80px, 16px);
     margin-top: em(80px, 16px);
-    padding-left: 4%;
-    padding-right: 4%;
+    // padding-left: 4%;
+    // padding-right: 4%;
   }
   h1 {
     color: #fff;
