--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/01-content-types/welcome-page@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/01-content-types/welcome-page@inprogress.mustache
@@ -11,18 +11,20 @@
           <p>
             Join today and help us <a href="#">Exchange the world!</a>
           </p>
-          <div class="view view--welcome-stats">
-            <div class="views-row welcome-stats__item">
-              <div class="welcome-stats__number">90</div>
-              <div class="welcome-stats__label">Innovations</div>
-            </div>
-            <div class="views-row welcome-stats__item">
-              <div class="welcome-stats__number">740k</div>
-              <div class="welcome-stats__label">In Funding</div>
-            </div>
-            <div class="views-row welcome-stats__item">
-              <div class="welcome-stats__number">55%</div>
-              <div class="welcome-stats__label">Funded</div>
+          <div class="pane--welcome-stats">
+            <div class="view view--welcome-stats">
+              <div class="views-row welcome-stats__item">
+                <div class="welcome-stats__number">90</div>
+                <div class="welcome-stats__label">Innovations</div>
+              </div>
+              <div class="views-row welcome-stats__item">
+                <div class="welcome-stats__number">740k</div>
+                <div class="welcome-stats__label">In Funding</div>
+              </div>
+              <div class="views-row welcome-stats__item">
+                <div class="welcome-stats__number">55%</div>
+                <div class="welcome-stats__label">Funded</div>
+              </div>
             </div>
           </div>
         </div>
@@ -33,34 +35,34 @@
 
       <div class="pane pane--welcome-page-user-register">
         <div class="pane__content">
-          
+
           <form id="user-register-form">
-            
+
             <div id="edit-lr-social-login-links" class="form-item form-type-item">
               <label>Login with Social ID:</label>
-              <div class="lr_singleglider_200 interface_container">     
-                <div class="lr_icons_box">       
-                  <div style="width:100%">    
-                    <span alt="Sign in with Google" title="Google" class="lr_providericons lr_google">    
-                    </span>       
-                  </div>     
-                </div>        
-                <div class="lr_icons_box">       
-                  <div style="width:100%">    
-                    <span alt="Sign in with Twitter" title="Twitter" class="lr_providericons lr_twitter">    
-                    </span>       
-                  </div>     
-                </div>        
-                <div class="lr_icons_box">       
-                  <div style="width:100%">    
-                    <span alt="Sign in with LinkedIn" title="LinkedIn" class="lr_providericons lr_linkedin">    
-                    </span>       
-                  </div>     
-                </div>   
+              <div class="lr_singleglider_200 interface_container">
+                <div class="lr_icons_box">
+                  <div style="width:100%">
+                    <span alt="Sign in with Google" title="Google" class="lr_providericons lr_google">
+                    </span>
+                  </div>
+                </div>
+                <div class="lr_icons_box">
+                  <div style="width:100%">
+                    <span alt="Sign in with Twitter" title="Twitter" class="lr_providericons lr_twitter">
+                    </span>
+                  </div>
+                </div>
+                <div class="lr_icons_box">
+                  <div style="width:100%">
+                    <span alt="Sign in with LinkedIn" title="LinkedIn" class="lr_providericons lr_linkedin">
+                    </span>
+                  </div>
+                </div>
               </div>
               <div style="clear:both"></div>
             </div>
-            
+
             <div class="required-fields">
               <div id="edit-field-user-firstname" class="field-type-text field-name-field-user-firstname field-widget-text-textfield">
                 <div id="field-user-firstname-add-more-wrapper">
