--- a/public/sites/all/themes/gesso/sass/partials/components/_footer.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_footer.scss
@@ -2,6 +2,21 @@ body > .footer {
   background: $gray;
 }
 
+body.page-simple > footer {
+  @extend %clearfix;
+  background: #e1e4e6;
+  @include box-shadow(0px 5px 5px -2px rgba(0,0,0,0.5) inset);
+  color: #363f46;
+  padding: 1em 0;
+
+  a {
+    color: #363f46;
+    &:hover, &:focus {
+      color: darken(#363f46,20%);
+    }
+  }
+}
+
 .footer__menu-bar {
   background: #565a5c;
   a {
