--- a/public/sites/all/themes/gesso/css/styles.css
+++ b/public/sites/all/themes/gesso/css/styles.css
@@ -5695,16 +5695,17 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
 
 /* line 5, ../sass/partials/components/pane/_pane--welcome-page-info.scss */
 .pane--welcome-page-info {
-  margin-top: 2.5em;
+  padding-top: 2.5em;
 }
 @media (min-width: 43.75em) {
   /* line 5, ../sass/partials/components/pane/_pane--welcome-page-info.scss */
   .pane--welcome-page-info {
     margin-bottom: 5em;
     margin-top: 5em;
+    padding-top: 0;
   }
 }
-/* line 14, ../sass/partials/components/pane/_pane--welcome-page-info.scss */
+/* line 15, ../sass/partials/components/pane/_pane--welcome-page-info.scss */
 .pane--welcome-page-info h1 {
   color: #fff;
   font-weight: 400;
@@ -5712,14 +5713,14 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   margin-bottom: 1.21875em;
   text-transform: uppercase;
 }
-/* line 21, ../sass/partials/components/pane/_pane--welcome-page-info.scss */
+/* line 22, ../sass/partials/components/pane/_pane--welcome-page-info.scss */
 .pane--welcome-page-info h2 {
   color: #ed7d3a;
   font-size: 1.875em;
   margin-bottom: 1.21875em;
   text-transform: uppercase;
 }
-/* line 28, ../sass/partials/components/pane/_pane--welcome-page-info.scss */
+/* line 29, ../sass/partials/components/pane/_pane--welcome-page-info.scss */
 .pane--welcome-page-info p {
   font-size: 1.125em;
   margin-bottom: 1.625em;
