[#45119]Fixed css rule for animated background. Hide honeypot field

--- a/public/sites/all/themes/gesso/css/no-mq.css
+++ b/public/sites/all/themes/gesso/css/no-mq.css
@@ -4286,9 +4286,8 @@ header.header {
 .page-simple {
   color: #fff;
 }
-
-/* line 7, ../sass/partials/components/_page-simple.scss */
-.main {
+/* line 4, ../sass/partials/components/_page-simple.scss */
+.page-simple .main {
   background-color: #0c304b;
   background: #0c304b url(../images/page-simple-bg.jpg) repeat-y 0 0;
   -webkit-animation: backgroundScroll 139s linear infinite;
@@ -6007,6 +6006,10 @@ tr.drag-previous {
   font-size: 0.875em;
   font-weight: 200;
   text-align: left;
+}
+/* line 103, ../sass/partials/components/_user-register-form.scss */
+#user-register-form .form-item-honeypot {
+  display: none;
 }
 
 /* line 4, ../sass/partials/components/_vertical-tabs.scss */
