[#45297]Update styling and markup for wanteds search form inputs

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-category/03-templates-wanteds-category.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-category/03-templates-wanteds-category.mustache
@@ -20,11 +20,13 @@
 
             &lt;div class=&quot;pane pane--wanteds-search&quot;&gt;
               &lt;div class=&quot;pane__content&quot;&gt;
-                &lt;form accept-charset=&quot;UTF-8&quot;&gt;
-                  &lt;div class=&quot;form-item form-item--textfield&quot;&gt;
-                    &lt;input type=&quot;text&quot; placeholder=&quot;Search the Wanted ads...&quot; class=&quot;form-text&quot;&gt;
+                &lt;form action=&quot;/members&quot; method=&quot;get&quot; id=&quot;views-exposed-form-user-listing-listing-pane&quot; accept-charset=&quot;UTF-8&quot;&gt;      &lt;div id=&quot;edit-search-api-views-fulltext&quot; class=&quot;views-widget views-widget--filter-search_api_views_fulltext&quot;&gt;
+                  &lt;div class=&quot;form-item form-type-textfield form-item-search-api-views-fulltext&quot;&gt;
+                    &lt;input autocapitalize=&quot;off&quot; autocorrect=&quot;off&quot; id=&quot;edit-search-api-views-fulltext&quot; name=&quot;search_api_views_fulltext&quot; value=&quot;&quot; size=&quot;30&quot; maxlength=&quot;128&quot; class=&quot;form-text&quot; type=&quot;text&quot;&gt;
                   &lt;/div&gt;
-                  &lt;input type=&quot;submit&quot; value=&quot;Search&quot; class=&quot;button button--submit&quot;&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;views-widget views-widget--submit&quot;&gt;
+                  &lt;input id=&quot;edit-submit-user-listing&quot; name=&quot;&quot; value=&quot;Apply&quot; class=&quot;button button--submit&quot; type=&quot;submit&quot;&gt;  &lt;/div&gt;
                 &lt;/form&gt;
               &lt;/div&gt;
             &lt;/div&gt;
