--- a/public/sites/all/themes/gesso/css/styles.css
+++ b/public/sites/all/themes/gesso/css/styles.css
@@ -5629,13 +5629,21 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
 }
 
 /* line 9, ../sass/partials/components/pane/_pane--wanteds-search.scss */
-.pane--wanteds-search .form-item--textfield {
+.pane--wanteds-search .views-widget--filter-search_api_views_fulltext {
   float: left;
-  display: inline-block;
+  display: block;
   margin-top: 0;
   width: calc(100% - 45px);
 }
-/* line 16, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+/* line 15, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+.pane--wanteds-search .views-widget {
+  margin-right: 0;
+}
+/* line 19, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+.pane--wanteds-search .form-item {
+  margin-top: 0;
+}
+/* line 23, ../sass/partials/components/pane/_pane--wanteds-search.scss */
 .pane--wanteds-search .form-text {
   background-color: #e6eaf0;
   height: 40px;
@@ -5643,32 +5651,32 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   padding: 12px;
   width: 100%;
 }
-/* line 22, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+/* line 29, ../sass/partials/components/pane/_pane--wanteds-search.scss */
 .pane--wanteds-search .form-text:focus {
   border-color: #7090b7;
   border-right: 0;
 }
-/* line 27, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+/* line 34, ../sass/partials/components/pane/_pane--wanteds-search.scss */
 .pane--wanteds-search .form-text::-webkit-input-placeholder {
   font-style: italic;
   color: #565a5c;
 }
-/* line 32, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+/* line 39, ../sass/partials/components/pane/_pane--wanteds-search.scss */
 .pane--wanteds-search .form-text:-moz-placeholder {
   font-style: italic;
   color: #565a5c;
 }
-/* line 37, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+/* line 44, ../sass/partials/components/pane/_pane--wanteds-search.scss */
 .pane--wanteds-search .form-text::-moz-placeholder {
   font-style: italic;
   color: #565a5c;
 }
-/* line 42, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+/* line 49, ../sass/partials/components/pane/_pane--wanteds-search.scss */
 .pane--wanteds-search .form-text:-ms-input-placeholder {
   font-style: italic;
   color: #565a5c;
 }
-/* line 49, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+/* line 56, ../sass/partials/components/pane/_pane--wanteds-search.scss */
 .pane--wanteds-search .button--submit {
   color: transparent;
   font: 0/0 a;
@@ -5687,7 +5695,7 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   display: inline-block;
   height: 40px;
 }
-/* line 60, ../sass/partials/components/pane/_pane--wanteds-search.scss */
+/* line 67, ../sass/partials/components/pane/_pane--wanteds-search.scss */
 .pane--wanteds-search .button--submit:focus, .pane--wanteds-search .button--submit:hover {
   background-color: #dc5606;
 }
