--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--wanteds-search.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--wanteds-search.scss
@@ -6,13 +6,20 @@ $search-bar-height: 40px;
 
 .pane--wanteds-search {
   @extend %clearfix;
-  .form-item--textfield {
+  .views-widget--filter-search_api_views_fulltext {
     float: left;
-    display: inline-block;
+    display: block;
     margin-top: 0;
     width: calc(100% - #{$search-button-width});
-
   }
+  .views-widget {
+    margin-right: 0;
+  }
+
+  .form-item  {
+    margin-top: 0;
+  }
+
   .form-text {
     background-color: $smoke;
     height: 40px;
