--- a/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
@@ -25,8 +25,10 @@
   display: block;
 
   .page-simple & {
-    @include svg-background(logo-simple);
-
-
+    background: image-url('gix-beta-logo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 42px;
+    width: 303px;
   }
 }
