--- a/public/sites/all/themes/gesso_longform/css/styles.css
+++ b/public/sites/all/themes/gesso_longform/css/styles.css
@@ -1027,8 +1027,10 @@ input.throbbing {
   background: transparent url("../images/footer-fact-sheet.png") no-repeat;
   display: block;
   position: absolute;
-  right: 15%;
-  top: 65px;
+  left: 25%;
+  right: 25%;
+  z-index: -10;
+  top: 2%;
 }
 .footer__download-image:before {
   content: "";
@@ -1036,18 +1038,37 @@ input.throbbing {
   height: 150%;
   width: 0;
 }
+@media (min-width: 54.375em) {
+  .footer__download-image {
+    left: initial;
+    right: 15%;
+    top: 65px;
+    z-index: 0;
+  }
+}
 
 .footer-about {
   float: left;
-  width: 30%;
+  width: 100%;
+}
+@media (min-width: 54.375em) {
+  .footer-about {
+    width: 30%;
+  }
 }
 .footer-about .footer-about__title {
   text-transform: uppercase;
 }
 
 .footer__sponsor {
-  width: 60%;
-  float: right;
+  width: 100%;
+  float: left;
+}
+@media (min-width: 54.375em) {
+  .footer__sponsor {
+    float: right;
+    width: 60%;
+  }
 }
 .footer__sponsor:before {
   content: "POWERED BY";
@@ -1059,9 +1080,9 @@ input.throbbing {
 }
 .footer__sponsor .footer-sponsor__image {
   display: inline-block;
-  float: left;
+  float: right;
   margin-right: 20px;
-  max-width: 160px;
+  max-width: 33.33333%;
   max-height: 55px;
 }
 .footer__sponsor .footer-sponsor__image-usaid {
@@ -1103,9 +1124,11 @@ input.throbbing {
 
 .footer__menu {
   float: right;
+  padding: 2em 0;
 }
 .footer__menu ul {
   list-style: none;
+  width: 100%;
 }
 .footer__menu ul li {
   border-right: 2px solid #4d4d4f;
