--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
@@ -168,7 +168,7 @@
                 padding-right: 1em;
               }
             }
-            [class*="span"] { 
+            [class*="span"] {
               min-height: 20px;
             }
           }
@@ -180,12 +180,29 @@
                 @extend %h2;
               }
               a, h2 {
-                border-bottom: 1px solid $border-color;
-                color: $orange;
+
+                background: $lightblue;
                 margin: 0 0 0.25em 0;
-                padding: 0 0 0.25em 0;
+                padding: 10px;
+                color: #fff;
+                position: relative;
+                &:hover  {
+                  background: $blue;
+                  text-decoration: none;
+                }
+                &:after {
+                  @include svg-background(chevron-thin-right2);
+                  content: "";
+                  display: inline-block;
+                  height: 16px;
+                  position: absolute;
+                  width: 16px;
+                  right: 10px;
+                  top: calc(50% - 8px);
+
+                }
               }
-              
+
             }
             .item-list {
               ul {
@@ -247,7 +264,7 @@
               a, h2 {
                 &:before {
                   @extend %tb-megamenu-submenu-icon;
-                  @include svg-background(icon-discussions-26-20-orange);
+                  @include svg-background(icon-discussions-26-20-white);
                   background-size: 26px 20px;
                   height: 20px;
                   width: 26px;
@@ -259,7 +276,7 @@
             a, h2 {
               &:before {
                 @extend %tb-megamenu-submenu-icon;
-                @include svg-background(icon-sectors-20-20-orange);
+                @include svg-background(icon-sectors-20-20-white);
                 background-size: 20px 20px;
                 height: 20px;
                 width: 20px;
@@ -270,7 +287,7 @@
             a, h2 {
               &:before {
                 @extend %tb-megamenu-submenu-icon;
-                @include svg-background(icon-topics-23-20-orange);
+                @include svg-background(icon-topics-23-20-white);
                 background-size: 23px 20px;
                 height: 20px;
                 width: 23px;
@@ -281,7 +298,7 @@
             a, h2 {
               &:before {
                 @extend %tb-megamenu-submenu-icon;
-                @include svg-background(icon-locations-15-20-orange);
+                @include svg-background(icon-locations-15-20-white);
                 background-size: 15px 20px;
                 height: 20px;
                 width: 15px;
@@ -292,7 +309,7 @@
             a, h2 {
               &:before {
                 @extend %tb-megamenu-submenu-icon;
-                @include svg-background(icon-programs-23-20-orange);
+                @include svg-background(icon-programs-23-20-white);
                 background-size: 23px 20px;
                 height: 20px;
                 width: 23px;
@@ -303,7 +320,7 @@
             a, h2 {
               &:before {
                 @extend %tb-megamenu-submenu-icon;
-                @include svg-background(icon-organization-20-20-orange);
+                @include svg-background(icon-organization-20-20-white);
                 background-size: 20px 20px;
                 height: 20px;
                 width: 20px;
@@ -314,7 +331,7 @@
             a, h2 {
               &:before {
                 @extend %tb-megamenu-submenu-icon;
-                @include svg-background(icon-members-20-20-orange);
+                @include svg-background(icon-members-20-20-white);
                 background-size: 20px 20px;
                 height: 20px;
                 width: 20px;
@@ -325,7 +342,7 @@
             a, h2 {
               &:before {
                 @extend %tb-megamenu-submenu-icon;
-                @include svg-background(icon-events-19-20-orange);
+                @include svg-background(icon-events-19-20-white);
                 background-size: 19px 20px;
                 height: 20px;
                 width: 19px;
@@ -338,3 +355,9 @@
   }
 }
 
+//Dropdown Multi column overrvide
+
+.tb-megamenu-block .item-list {
+  font-size: em(14px, 16px);
+  line-height: 1.5;
+}
