--- a/public/sites/all/themes/gesso_longform/css/no-mq.css
+++ b/public/sites/all/themes/gesso_longform/css/no-mq.css
@@ -1737,10 +1737,10 @@ input.throbbing {
   left: 25%;
   right: 25%;
   z-index: -10;
-  top: 2%;
+  top: 0;
   left: initial;
   right: 15%;
-  top: 65px;
+  top: 1px;
   z-index: 0;
 }
 .pre-footer__download-image:before {
