--- a/public/sites/all/themes/gesso_longform/css/no-mq.css
+++ b/public/sites/all/themes/gesso_longform/css/no-mq.css
@@ -1363,6 +1363,7 @@ input.throbbing {
   background-color: #f3f3f3;
   background-color: rgba(0, 0, 0, 0.8);
   color: #FFFFFF;
+  margin-top: 2.5em;
   position: absolute;
   width: 100%;
   z-index: 100;
@@ -1899,7 +1900,7 @@ input.throbbing {
   height: 2.5em;
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 50%;
   z-index: 10;
   top: 5%;
   right: 5%;
