--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_mobile-menu.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_mobile-menu.scss
@@ -95,6 +95,7 @@
   background-color: $mobile-menu-fallback-bg-color;
   background-color: $mobile-menu-bg-color;
   color: $mobile-menu-text-color;
+  margin-top: em(40px);
   position: absolute;
   width: 100%;
   z-index: 100;
