--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_lists.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_lists.scss
@@ -8,7 +8,7 @@ ol {
   	counter-reset: li-counter;
   	list-style-type: none;
   	li{
-  		// margin-bottom: 20px;
+  		margin-bottom: 1em;
   		min-height: $ol-bullet-size * 1.20;
   		padding-left: 20px;
   		position: relative;
@@ -29,7 +29,7 @@ ol {
       height: $ol-bullet-size;
       position: absolute;
       text-align: center;
-      top: 0;
+      top: 4px;
       width: $ol-bullet-size;
     }
   }
