--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_mobile-menu.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_mobile-menu.scss
@@ -41,7 +41,7 @@
   height: em(40px);
   line-height: em(40px);
   margin: 0;
-  padding: 0 1em;
+  padding: 4px 1em;
   text-decoration: none;
 
   &:focus {
@@ -57,7 +57,7 @@
   position: relative;
   z-index: 15;
   @include breakpoint($mobile-menu-bp, $no-query: true) {
-    margin-right: 18%;
+    margin-right: 5.5%; // to match share icons
   }
 }
 
@@ -67,12 +67,13 @@
 }
 
 .mobile-menu__icon {
-  @include image-replace(20px, 20px);
+  @include image-replace(22px, 22px);
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-size: 20px 20px;
+  background-size: 22px 22px;
   display: inline-block;
-  height: 18px;
+  height: 22px;
+  width: 22px;
 }
 
 %mobile-menu__icon--close {
@@ -81,12 +82,9 @@
 
 .mobile-menu__icon--menu {
   @include svg-background(mobile-menu);
-  background-size: 20px 20px;
-  width: 20px;
 
   .is-active & {
     @extend %mobile-menu__icon--close;
-    background-size: 22px 22px;
   }
 }
 
