--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_section-header.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_section-header.scss
@@ -20,6 +20,9 @@
 	position: absolute;
 	top: 0;
 	z-index: -1;
+	img {
+   max-width: initial;
+  }
 	&:before { // CSS Color Overlay
 	  background: rgba(0,0,0, 0.5);
 	  content: " ";
