--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_section-break.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_section-break.scss
@@ -11,7 +11,13 @@
 }
 
 .section-break__image{
-
+	left: 0;
+	position: absolute;
+	top: 0;
+	z-index: -1;
+	img {
+   max-width: initial;
+  }
 }
 
 .section-break__caption {
