--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_lists.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_lists.scss
@@ -10,7 +10,7 @@ ol {
   	li{
   		margin-bottom: 2em;
   		min-height: $ol-bullet-size * 1.20;
-  		padding-left: 20px;
+  		padding-left: 4em;
   		position: relative;
   		ol{
   			padding-top: $ol-bullet-size;
