remove border around section header & break images

--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_section-break.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_section-break.scss
@@ -10,6 +10,10 @@
   position: relative;
   text-align: center;
   z-index:-2;
+  .asset {
+  	background-color: transparent;
+  	padding: 0;
+  }
 }
 
 .section-break__image{
