--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-about.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-about.scss
@@ -6,9 +6,12 @@
 		}
 		.block__title {
 			border-bottom: 1px solid #cecfcb;
+			font-size: 1em;
+			padding-bottom: 1em;
 			text-transform: uppercase;
 		}
 		.block__content  {
+			font-size: .9em;
 			.button--highlight{
 				background-color: #b71234;
     		border-color: #b71234;
