add space between header and start of paragraphs module

--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_paragraphs-items.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_paragraphs-items.scss
@@ -1,6 +1,6 @@
 // @file
 // Wrapper for all Paragraphs Elements (Sans Header and Footer)
 
-.paragraphs-items{
-	margin-top: -4em;
+.paragraphs-items {
+	margin-top: 0;
 }
