--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_share-block.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_share-block.scss
@@ -35,12 +35,15 @@
   span.st_sharethis_custom {
     @include svg-background(longform-share-icon-square);
     @include image-replace (40px, 40px);
+    background-repeat: no-repeat;
     cursor: pointer;
     position: relative;
-    z-index: 20;
+    z-index: 50;
     @include breakpoint($mobile-menu-bp, $no-query: true) {
       @include image-replace (75px, 75px);
       @include svg-background(longform-share-icon);
+      background-repeat: no-repeat;
+      z-index: 50;
     }
   }
 }
@@ -64,10 +67,30 @@
 
 }
 .share-block__icon--print {
+  z-index: 20;
   @include svg-background(longform-print-icon-square);
+  @include image-replace (40px, 40px);
   @include breakpoint($mobile-menu-bp, $no-query: true) {
     @include svg-background(longform-print-icon);
+    @include image-replace (75px, 75px);
   }
+}
+
+//ie9 break fix
+.ie9 .share-block__icon {
+  height: 40px;
+  width: 40px;
+  margin-left: 20px;
+}
+.ie9 .share-block__icon--share span.st_sharethis_custom {
+  background-repeat: no-repeat;
+}
+.ie9 .share-block__icon--fav {
+  background-repeat: no-repeat;
+}
+.ie9 .share-block__icon--print {
+  background-repeat: no-repeat;
+  margin-left: 20px;
 }
 
 //Hide Usabilla Live Button
