--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-partner.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-partner.scss
@@ -1,7 +1,7 @@
 //@file
-//aka the "Powered by" Menu
+//Footer Partner Logos area
 
-.footer-sponsor {
+.footer-partner {
 
 	@include breakpoint($mobile-menu-bp, $no-query: true) {
 
@@ -14,22 +14,22 @@
     width: 100%;
     padding-right: 4em;
 	}
-	.footer-sponsor__image { 
+	.footer-partner__image { 
 		display: inline-block;
 		float: right;
 		margin-right: 20px;
 		max-width: percentage(1/3);
 		max-height: 55px;
 	}
-	.footer-sponsor__image-usaid {
+	.footer-partner__image-usaid {
 		@include image-replace(166px, 55px);
 		background: transparent url('../images/logo-usaid.png') no-repeat;
 	}
-	.footer-sponsor__image-usgd {
+	.footer-partner__image-usgd {
 		@include image-replace(207px, 54px);
 		background: transparent url('../images/logo-uslab.png') no-repeat;
 	}
-	.footer-sponsor__image-gix {
+	.footer-partner__image-gix {
 		@include image-replace(222px, 63px);
 		background: transparent url('../images/logo-gix.png') no-repeat;
 	}
