--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-partner.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-partner.scss
@@ -2,9 +2,10 @@
 //Footer Partner Logos area
 
 .footer-partner {
-
+	float: right;
+	width: 100%;
 	@include breakpoint($mobile-menu-bp, $no-query: true) {
-
+		width: 70%;
 	}
 	&:before {
 		content: "PARTNERS";
