--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_pre-footer.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_pre-footer.scss
@@ -27,7 +27,6 @@
 	@include image-replace(261px, 165px);
 	background: transparent url('../images/footer-fact-sheet.png') no-repeat;
   display: block;  
-  left: 25%;
   position: absolute;
   right: 25%;
   top: 1px;
@@ -56,5 +55,12 @@
   @include breakpoint($mobile-menu-bp, $no-query: true) {
   }
 }
-.pre-footer__description-title{}
-.pre-footer__description-body{}
+.pre-footer__description-title{
+  font-weight: bold;
+  padding-bottom: 10px;
+}
+.pre-footer__description-body{
+  .button {
+    margin-top: 10px;
+  }
+}
