--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_share-block.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_share-block.scss
@@ -77,6 +77,8 @@
 //ie9 break fix
 .ie9 .share-block__icon {
   background-repeat: no-repeat;
+  height: 40px;
+  width: 40px;
   @include breakpoint(700px, $no-query: true) {
     height: 40px;
     width: 40px;
@@ -91,11 +93,18 @@
 }
 .ie9 .share-block__icon--fav {
   background-repeat: no-repeat;
+  a, a.flagged {
+    background-repeat: no-repeat; 
+    background-size: 34px 34px;
+    height: 40px;
+    width: 40px;
+  }
+
 }
 .ie9 .share-block__icon--print {
   background-repeat: no-repeat;
   @include breakpoint(700px, $no-query: true) {
-    margin-left: 20px;
+    // margin-left: 20px;
   }
   
 }
