--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-powered.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-powered.scss
@@ -2,22 +2,22 @@
 // Footer Powered By block
 
 .footer-powered {
-	float: left;
+	float: right;
+	max-height: 150px;
 	width: 100%;
-	@include breakpoint($mobile-menu-bp, $no-query: true) {
-		width: 28%;
-	}
 	&:before {
 		content: "POWERED BY";
 		display: block;
 		font-style: italic;
-		text-align: left;
-    width: 100%;
+		text-align: right;
+    // width: 100%;
 	}
 	a {
 		@include image-replace(261px, 165px);
 		background: transparent url('../images/logo-gix.png') no-repeat;
 		display: block;
+		float: right;
+		width: 210px;
 	}
 	p:first-child {
 		display: none;
