remove description header

--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_pre-footer.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_pre-footer.scss
@@ -73,6 +73,9 @@
   text-transform: uppercase;
 }
 .pre-footer__description-body{
+  h2 {
+    display: none;
+  }
   .button {
     margin-top: 10px;
     background-color: $lightred;
