--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-partner.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_footer-partner.scss
@@ -7,7 +7,7 @@
 	.footer-partner__image { 
 		display: inline-block;
 		float: right;
-		margin-right: 20px;
+		margin-left: 20px;
 		max-width: percentage(1/3);
 		max-height: 55px;
 	}
