small footer fix

--- a/public/sites/all/themes/gesso_microsites/css/styles.css
+++ b/public/sites/all/themes/gesso_microsites/css/styles.css
@@ -790,6 +790,7 @@ input.throbbing {
 }
 @media (min-width: 66.875em) {
   .block--menu-menu-sub-footer-menu {
+    clear: right;
     float: right;
   }
 }
