--- a/public/sites/all/themes/gesso_microsites/sass/partials/components/block/_block--menu-menu-sub-footer-menu.scss
+++ b/public/sites/all/themes/gesso_microsites/sass/partials/components/block/_block--menu-menu-sub-footer-menu.scss
@@ -1,6 +1,7 @@
 .block--menu-menu-sub-footer-menu {
   @extend %clearfix;
   @include breakpoint(1070px, $no-query: true) {
+    clear: right;
     float: right;
   }
   margin-top: 2em;
