microsite component theming

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/00-microsite-header@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/00-microsite-header@inprogress.mustache
@@ -8,7 +8,7 @@
 </div>
 
 <div class="patternlab-markup">
-  <strong>Microsite Page Header Component image size: 1600x700</strong><br>
+  <strong>Microsite Page Header Component Image Size: 1600x700</strong><br>
   <strong>Microsite Page Header Component Markup:</strong>
   <xmp>
     <div class="microsite-header" style="background-image: url([imagename].jpg);">
