--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/microsite-page@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/microsite-page@inprogress.mustache
@@ -7,6 +7,8 @@
      {{> molecules-microsite-header }}
      {{> molecules-microsite-text-centered }}
      {{> molecules-microsite-break }}
+     {{> molecules-microsite-50-50 }}
+     {{> molecules-microsite-50-50-reversed }}
      {{> molecules-microsite-featured }}
 
   </div>
