--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-text.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-text.scss
@@ -1,6 +1,8 @@
 // Styles for the microsites paragraphs text block component
 .microsite-text {
   @extend %microsite-component;
+  margin-bottom: 2em;
+  margin-top: 2em;
   h2 {
     text-transform: uppercase;
   }
