--- a/public/sites/all/themes/gesso/sass/pattern-lab.scss
+++ b/public/sites/all/themes/gesso/sass/pattern-lab.scss
@@ -6,4 +6,24 @@
 
 .sg-pattern {
   @extend .layout-constrain;
+}  
+
+.patternlab-markup {
+  @extend .layout-constrain;
+  display: none;
+  .sg-pattern & {
+    display: block;
+  }
+  font-size: 12px;
+  margin-bottom: 1em;
+  margin-top: 1em;
+  strong {
+    font-size: 14px;
+  }
+  xmp {
+    background: #333;
+    color: #fff;
+    margin: 0;
+    padding: 1em;
+  }  
 }
