--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-50-50.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-50-50.scss
@@ -26,6 +26,9 @@
   @include breakpoint(900px, $no-query: true) {
     width: 50%;
   }
+  img {
+    width: 100%;
+  }
 }
 
 .microsite-50-50--reversed {
