theming for microsite components

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-featured@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-featured@inprogress.mustache
@@ -1,46 +1,126 @@
-<div class="microsite-featured">
-  <div class="microsite-featured__item" style="background-image:url(../../images/buffy-500-300.jpg);">
-    <div class="microsite-featured__text-wrapper">
-      <div class="microsite-featured__text">
-        <div class="microsite-featured__headline">Headline Goes Here</div>
-        <div class="microsite-featured__subtitle">Subtitle Goes Here</div>
-        <a href="#" class="microsite-featured__link">View Innovation</a>
+<div class="view view--microsite-featured">
+  <div class="layout-grid layout-grid--cols-4 layout-grid--microsite-featured">
+    <div class="layout-grid__row">
+      <div class="layout-grid__column">
+        <div class="microsite-featured">
+          <div class="microsite-featured__image">
+            <img src="../../images/buffy-500-300.jpg">
+          </div>
+          <div class="microsite-featured__text">
+            <div class="microsite-featured__headline">Headline Goes Here</div>
+            <div class="microsite-featured__subtitle">Subtitle Goes Here</div>
+            <a href="#" class="microsite-featured__link">View Innovation</a>
+          </div>
+        </div>
+      </div>
+      <div class="layout-grid__column">
+        <div class="microsite-featured">
+          <div class="microsite-featured__image">
+            <img src="../../images/hannibal-500-300.jpg">
+          </div>
+          <div class="microsite-featured__text">
+            <div class="microsite-featured__headline">Headline Goes Here</div>
+            <div class="microsite-featured__subtitle">Subtitle Goes Here</div>
+            <a href="#" class="microsite-featured__link">View Innovation</a>
+          </div>
+        </div>
+      </div>
+      <div class="layout-grid__column">
+        <div class="microsite-featured">
+          <div class="microsite-featured__image">
+            <img src="../../images/scully-500-300.jpg">
+          </div>
+          <div class="microsite-featured__text">
+            <div class="microsite-featured__headline">Headline Goes Here</div>
+            <div class="microsite-featured__subtitle">Subtitle Goes Here</div>
+            <a href="#" class="microsite-featured__link">View Innovation</a>
+          </div>
+        </div>
+      </div>
+      <div class="layout-grid__column">
+        <div class="microsite-featured">
+          <div class="microsite-featured__image">
+            <img src="../../images/sherlock-500-300.jpg">
+          </div>
+          <div class="microsite-featured__text">
+            <div class="microsite-featured__headline">Headline Goes Here</div>
+            <div class="microsite-featured__subtitle">Subtitle Goes Here</div>
+            <a href="#" class="microsite-featured__link">View Innovation</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="microsite-featured__item" style="background-image:url(../../images/hannibal-500-300.jpg);">
-    <div class="microsite-featured__text-wrapper">
-      <div class="microsite-featured__text">
-        <div class="microsite-featured__headline">Headline Goes Here</div>
-        <div class="microsite-featured__subtitle">Subtitle Goes Here</div>
-        <a href="#" class="microsite-featured__link">View Innovation</a>
-      </div>
-    </div>
-  </div>
-  <div class="microsite-featured__item" style="background-image:url(../../images/scully-500-300.jpg);">
-    <div class="microsite-featured__text-wrapper">
-      <div class="microsite-featured__text">
-        <div class="microsite-featured__headline">Headline Goes Here</div>
-        <div class="microsite-featured__subtitle">Subtitle Goes Here</div>
-        <a href="#" class="microsite-featured__link">View Innovation</a>
-      </div>
-    </div>
-  </div>
-  <div class="microsite-featured__item" style="background-image:url(../../images/sherlock-500-300.jpg);">
-    <div class="microsite-featured__text-wrapper">
-      <div class="microsite-featured__text">
-        <div class="microsite-featured__headline">Headline Goes Here</div>
-        <div class="microsite-featured__subtitle">Subtitle Goes Here</div>
-        <a href="#" class="microsite-featured__link">View Innovation</a>
-      </div>
+  <div class="view__footer">
+    <div class="microsite-link-bar">
+      <a href="#">View All Projects</a>
     </div>
   </div>
 </div>
+ 
 
 <div class="patternlab-markup">
   <strong>Microsite Featured Component Image Size: 500x300</strong><br>
   <strong>Microsite Featured Component Markup:</strong>
   <xmp>
-    
+    <div class="view view--microsite-featured">
+      <div class="layout-grid layout-grid--cols-4 layout-grid--microsite-featured">
+        <div class="layout-grid__row">
+          <div class="layout-grid__column">
+            <div class="microsite-featured">
+              <div class="microsite-featured__image">
+                <img src="[image-name].jpg">
+              </div>
+              <div class="microsite-featured__text">
+                <div class="microsite-featured__headline">[content]</div>
+                <div class="microsite-featured__subtitle">[content]</div>
+                <a href="#" class="microsite-featured__link">View Innovation</a>
+              </div>
+            </div>
+          </div>
+          <div class="layout-grid__column">
+            <div class="microsite-featured">
+              <div class="microsite-featured__image">
+                <img src="[image-name].jpg">
+              </div>
+              <div class="microsite-featured__text">
+                <div class="microsite-featured__headline">[content]</div>
+                <div class="microsite-featured__subtitle">[content]</div>
+                <a href="#" class="microsite-featured__link">View Innovation</a>
+              </div>
+            </div>
+          </div>
+          <div class="layout-grid__column">
+            <div class="microsite-featured">
+              <div class="microsite-featured__image">
+                <img src="[imagename].jpg">
+              </div>
+              <div class="microsite-featured__text">
+                <div class="microsite-featured__headline">[content]</div>
+                <div class="microsite-featured__subtitle">[content]</div>
+                <a href="#" class="microsite-featured__link">View Innovation</a>
+              </div>
+            </div>
+          </div>
+          <div class="layout-grid__column">
+            <div class="microsite-featured">
+              <div class="microsite-featured__image">
+                <img src="[imagename].jpg">
+              </div>
+              <div class="microsite-featured__text">
+                <div class="microsite-featured__headline">[content]</div>
+                <div class="microsite-featured__subtitle">[content]</div>
+                <a href="#" class="microsite-featured__link">View Innovation</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="view__footer">
+        <div class="microsite-link-bar">
+          <a href="#">View All Projects</a>
+        </div>
+      </div>
+    </div>
   </xmp>
 </div>
