--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-callout-card.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-callout-card.scss
@@ -1,5 +1,7 @@
 .microsite-callout-card {
   @extend %microsite-component;
+  margin-bottom: 2em;
+  margin-top: 2em;
   padding: 2em 0;
   text-align: center;
 }
