--- a/public/sites/all/themes/gesso/sass/pattern-lab.scss
+++ b/public/sites/all/themes/gesso/sass/pattern-lab.scss
@@ -2,7 +2,7 @@
 // Styles for Pattern Lab.
 
 @import 'partials/global';
-@import 'partials/layout/page';
+@import 'partials/layout/layout-constrain';
 
 .sg-pattern {
   @extend .layout-constrain;
