--- a/public/sites/all/themes/gesso/sass/partials/_quick-fixes.scss
+++ b/public/sites/all/themes/gesso/sass/partials/_quick-fixes.scss
@@ -4,28 +4,40 @@
 // Deadlines happen, so put your quick fixes here. Hopefully there will be time
 // later to move/re-factor these styles into their proper place.
 
-.microsite-text {
-    margin-bottom: 4em;
-    margin-top: 4em;
-    padding-left: 10%;
-    padding-right: 10%;
-}
+.section--microsite {
 
-.section--microsite .microsite-text ul > li:before {
-    content: "►";
-    color: #cd1041;
-    display: inline-block;
-    margin-right: 10px;
-    margin-left: -21px;
-    font-size: 30px;
-    position: relative;
-    top: 3px;
-    width: 30px;
-}
+  header.header {
+    display: block;
+  }
 
-.microsite-50-50__text {
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+  .region-navigation {
+    display: block;
+  }
+
+  .microsite-text {
+    margin: 4em 0;
+    padding: 0 10%;
+
+    @include breakpoint($mobile-menu-bp, $no-query: true) {
+      padding: 0 5%;
+      margin: 0;
+    }
+
+    ul > li:before {
+      content: "►";
+      color: #cd1041;
+      display: inline-block;
+      margin-right: 10px;
+      margin-left: -21px;
+      font-size: 30px;
+      position: relative;
+      top: 3px;
+      width: 30px;
+    }
+  }
+
+  .microsite-50-50__text {
+    padding: 2% 5%;
+  }
+
 }
